[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.0
height = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0, 0 )

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_ray1" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -40, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_ray2" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( -40, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_ray3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -40, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_ray1" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 40, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_ray2" type="RayCast2D" parent="."]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 40, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_ray3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="room_detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="room_detector"]
shape = SubResource( 3 )

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="area_entered" from="room_detector" to="." method="_on_room_detector_area_entered"]
